<resources>
    <string name="app_name">Vineyard</string>
    <string name="name_of_wine">Brand of the wine</string>
    <string name="red_wine">Red</string>
    <string name="white_wine">White</string>
    <string name="year_of_production">Year of production:</string>
    <string name="add_wine_button_description">add wine button</string>
    <string name="wine_glass_image_description">Wine glass showing color of the wine</string>
    <string name="delete_wines">Delete Wines</string>
    <string name="wines_deleted_confirmation">All wines deleted!</string>
    <string name="wine_deleted_confirmation">Wine has been deleted!</string>
    <string name="wines_deleted_cancelled">Your wine data is still here</string>
    <string name="wine_deleted_cancelled">Your wine is still here</string>
    <string name="alert_dialog_delete_wines">You are about to delete all your wine data</string>
    <string name="alert_dialog_delete_this_wine">You are about to delete this wine</string>
    <string name="rate_the_wine">Rate wine</string>
    <string name="red" translatable="false">red</string>
    <string name="white" translatable="false">white</string>
    <string name="cant_set_empty_record">Can not insert empty record!</string>
    <string name="wine_added_toast">Wine added!</string>
    <string name="wine_updated_toast">Wine updated!</string>
    <string name="wine_could_not_be_added">Wine could not be added!</string>
    <string name="year_of_production_hint">i.e. 2017</string>
    <string name="what_s_the_usual_price">What\'s the price?</string>
    <string name="price_hint">i.e. 29$</string>
    <string name="choose_wine_color">What\'s the wine color?</string>
    <string name="_1_to_5">1 to 5</string>
    <string name="add_new_wine">Add new wine</string>
    <string name="edit_wine">Edit wine</string>
    <string name="add">Add</string>
    <string name="pink_wine">Pink</string>
    <string name="pink" translatable="false">pink</string>
    <string name="usual_price">Usual price: </string>
    <string name="main_fragment">MainFragment</string>
    <string name="detail_fragment">DetailFragment</string>
    <string name="add_wine_fragment">AddWineFragment</string>
    <string name="no_wines_yet">You have no wines added yet.</string>
    <string name="sorting_wines">Sorting wines</string>
    <string name="show_wines_in_chronological_order">Show wines in chronological order</string>
    <string name="wines_sorted_chronological_order">Wines sorted in chronological order</string>
    <string name="wines_sorted_rate_order">Wines sorted in rate order</string>
    <string name="currency">$</string>
    <string name="rate_needs_to_be_in_bounds">Please put rate between 1 and 5</string>
    <string name="your_wine_details">Wine details</string>
    <string name="what_is_the_sweetness_of_the_wine">What is the sweetness of the wine?</string>
    <string name="dry">Dry</string>
    <string name="semi_dry">Semi dry</string>
    <string name="semi_sweet">Semi sweet</string>
    <string name="sweet">Sweet</string>
    <string name="save_changes_after_edit">Save changes</string>
    <string name="edit_wine_fragment">EditWineFragment</string>
    <string name="wine_edited">Wine has been edited</string>
    <string name="add_your_first_wine_with_button">Add your first wine with + button</string>
    <string name="add_photo_of_wine">Add a photo of the wine</string>
    <string name="wine_image">Wine image</string>
    <string name="add_photo">Add photo</string>
</resources>
