<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/main_fragment">

    <fragment
        android:id="@+id/main_fragment"
        android:name="pl.nataliana.mywine.ui.main.MainFragment"
        android:label="@string/main_fragment"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_detailFragment"
            app:enterAnim="@anim/fragment_open_wine"
            app:exitAnim="@anim/fragment_close_exit"
            app:destination="@id/detail_fragment" />
        <action
            android:id="@+id/action_mainFragent_to_addWineFragment"
            app:enterAnim="@anim/fragment_open_wine"
            app:exitAnim="@anim/fragment_close_exit"
            app:destination="@id/add_wine_fragment" />
        <action
            android:id="@+id/action_mainFragent_to_editWineFragment"
            app:destination="@id/edit_wine_fragment"
            app:enterAnim="@anim/fragment_open_wine"
            app:exitAnim="@anim/fragment_close_exit" />
    </fragment>
    <fragment
        android:id="@+id/detail_fragment"
        android:name="pl.nataliana.mywine.ui.detail.DetailFragment"
        android:label="@string/detail_fragment"
        tools:layout="@layout/fragment_wine_detail">
        <argument
            android:name="id"
            app:argType="long" />
        <action
            android:id="@+id/action_detailFragment_to_mainFragment"
            app:enterAnim="@anim/fragment_open_wine"
            app:exitAnim="@anim/fragment_close_exit"
            app:destination="@id/main_fragment"
            app:launchSingleTop="false"
            app:popUpTo="@+id/main_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/add_wine_fragment"
        android:name="pl.nataliana.mywine.ui.detail.AddWineFragment"
        android:label="@string/add_wine_fragment"
        tools:layout="@layout/fragment_add_wine" >
        <action
            android:id="@+id/action_addWineFragment_to_mainFragment"
            app:enterAnim="@anim/fragment_open_wine"
            app:exitAnim="@anim/fragment_close_exit"
            app:destination="@id/main_fragment"
            app:launchSingleTop="false"
            app:popUpTo="@+id/main_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/edit_wine_fragment"
        android:name="pl.nataliana.mywine.ui.detail.EditWineFragment"
        android:label="@string/edit_wine_fragment"
        tools:layout="@layout/fragment_add_wine">
        <argument
            android:name="id"
            app:argType="long" />
        <action
            android:id="@+id/action_editWineFragment_to_mainFragment"
            app:destination="@id/main_fragment"
            app:enterAnim="@anim/fragment_open_wine"
            app:exitAnim="@anim/fragment_close_exit"
            app:launchSingleTop="false"
            app:popUpTo="@+id/main_fragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>